--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,10 +14,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "@types/express": "^4.17.21"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/node": "^22.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
